--- a/variants/php7.4-apache/Dockerfile
+++ b/variants/php7.4-apache/Dockerfile
@@ -2,14 +2,25 @@ FROM php:7.4-apache
 
 ARG SUITECRM_VERSION=7.12.7
 ENV APACHE_DOCUMENT_ROOT=/var/www/html
+ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libpng-dev libjpeg-dev libzip-dev libicu-dev libxml2-dev git unzip curl cron \
-  && docker-php-ext-configure gd --with-jpeg \
-  && docker-php-ext-install -j$(nproc) gd mysqli pdo pdo_mysql zip intl mbstring opcache xml soap \
-  && a2enmod rewrite headers expires
+RUN apt-get update          && apt-get install -y --no-install-recommends             ca-certificates curl wget unzip git build-essential g++ pkg-config             zlib1g-dev libzip-dev libicu-dev libxml2-dev             libpng-dev libwebp-dev libjpeg62-turbo-dev libjpeg-dev             libfreetype6-dev libfreetype-dev libonig-dev cron          && echo "=== Compiler versions ==="          && gcc --version || true          && g++ --version || true          && dpkg -l | grep libicu || true          && rm -rf /var/lib/apt/lists/*
+
+RUN set -x && docker-php-ext-configure gd --with-freetype --with-jpeg
+
+RUN set -x && docker-php-ext-install gd
+RUN set -x && docker-php-ext-install mysqli
+RUN set -x && docker-php-ext-install pdo pdo_mysql
+RUN set -x && docker-php-ext-install zip
+RUN set -x && docker-php-ext-install intl
+RUN set -x && docker-php-ext-install mbstring
+RUN set -x && docker-php-ext-install opcache xml soap
+
+RUN a2enmod rewrite headers expires
 
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+EXPOSE 80
 ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["apache2-foreground"]
